--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!xmas-cards.qmd"
+    - "!ian-diamond.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -67,9 +67,9 @@ listing:
     contents: 
     - /viewpoints
     - "!index.qmd"
-    - "!ai-fringe.qmd"
     - "!digital-ethics-summit.qmd"
     - "!rwds-xmas-card.qmd"
+    - "!ian-diamond.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -131,15 +131,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/ideas/tutorials/posts/2023/12/12/xmas-cards.qmd">
+<a href="/viewpoints/interviews/posts/2023/12/15/ian-diamond.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Creating Christmas cards with R
-The programming language R is capable of creating a wide variety of geometric shapes that can be used to construct high quality graphics -- including festive images. Nicola Rennie walks us through the process of using R packages to create and send Christmas cards with R.    
+## 'I was pretty clear in my mind that we were into a no-going-back situation'
+Real World Data Science interviews UK national statistician Professor Sir Ian Diamond about culture change and innovation in the national statistical system post-Covid, building trust through transparency, and using AI tools to empower people to interrogate data.   
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](ideas/tutorials/posts/2023/12/12/images/xmas-card.png)
+![](viewpoints/interviews/posts/2023/12/15/images/ian-diamond.png)
 :::
 :::
 
@@ -174,27 +174,14 @@ Welcome to **Real World Data Science**, a new project from the [Royal Statistica
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## In academia, the bias in favor of positive findings is well-documented. But, in an applied setting, where results matter more than publication criteria, negative findings can falsify erroneous assumptions, bring unknown problems to light, and prompt the creation of new processes and tools. In this context, a failure is only truly a failure if nothing is learned from it.
-Noah Wright on 'learning from failure' 
+## I hear more and more a lot of companies talking about AI general intelligence, and how AI is going to take over the world, and I’m tremendously concerned about this. There is an opportunity to build AI that is human empowering, that keeps us strong, able, capable, intelligent, and can support us in all our human capabilities.
+Mihaela van der Schaar on AI's potential for good
 
 ::: {.button}
-[Read the case study](case-studies/posts/2023/11/16/learning-from-failure.qmd)
+[Join the debate](viewpoints/posts/2023/12/06/ai-fringe.qmd)
 :::
 
 :::
-:::
-:::
-
-::: {.content-container}
-::: {.listing-block}
-<a href="case-studies/index.qmd">
-
-## Case Studies
-</a> 
-
-::: {#case-studies}
-:::
-
 :::
 :::
 
@@ -211,16 +198,29 @@ Noah Wright on 'learning from failure'
 :::
 :::
 
+::: {.content-container}
+::: {.listing-block}
+<a href="case-studies/index.qmd">
+
+## Case Studies
+</a> 
+
+::: {#case-studies}
+:::
+
+:::
+:::
+
 ::: {.pullout-text}
 ::: {.pullout-container}
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## Open science supports reproducible research. This means that others can download your data and code, re-run the analysis, and see if they obtain the same results. To get the full benefit of open science and promote reproducibility, code needs to be written with enough explanations or comments to help others understand the logic of the various stages of an analysis.
-Isabel Sassoon, senior lecturer, Brunel University London 
+## In academia, the bias in favor of positive findings is well-documented. But, in an applied setting, where results matter more than publication criteria, negative findings can falsify erroneous assumptions, bring unknown problems to light, and prompt the creation of new processes and tools. In this context, a failure is only truly a failure if nothing is learned from it.
+Noah Wright on 'learning from failure' 
 
 ::: {.button}
-[How to 'open science'](ideas/posts/2023/11/06/how-to-open-science.qmd)
+[Read the case study](case-studies/posts/2023/11/16/learning-from-failure.qmd)
 :::
 
 :::
