--- a/viewpoints/interviews/posts/2023/12/15/ian-diamond.qmd
+++ b/viewpoints/interviews/posts/2023/12/15/ian-diamond.qmd
@@ -47,7 +47,7 @@ So, I do think it's been a major change in what we do, and that will continue. B
 ::: {.pullquote-container}
 ::: grid
 ::: {.g-col-12 .g-col-lg-4}
-![Professor Sir Ian Diamond, UK national statistician.](images/ian-diamond-sq.png){fig-alt="Photo of national statistician Professor Sir Ian Diamond, standing, with microphone, during a talk." fig-align="left"}
+![Professor Sir Ian Diamond, UK national statistician. Image supplied, used with permission.](images/ian-diamond-sq.png){fig-alt="Photo of national statistician Professor Sir Ian Diamond, standing, with microphone, during a talk." fig-align="left"}
 ::: 
 ::: {.g-col-12 .g-col-lg-8 .pullquote-grid .pullquote}
 ![](/images/pullquote-purple.png){width="50px"}
@@ -101,7 +101,7 @@ I hope it will be an innovative, agile organisation which is using evermore dive
 Copyright and licence
 : &copy; 2023 Royal Statistical Society
 
-<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>.
+<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>. Photo of Professor Sir Ian Diamond is not included in this licence.
   
 :::
 
