--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!ian-diamond.qmd"
+    - "!rwds-xmas-card.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -131,15 +131,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/interviews/posts/2023/12/15/ian-diamond.qmd">
+<a href="/viewpoints/editors-blog/posts/2023/12/12/rwds-xmas-card.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## 'I was pretty clear in my mind that we were into a no-going-back situation'
-Real World Data Science interviews UK national statistician Professor Sir Ian Diamond about culture change and innovation in the national statistical system post-Covid, building trust through transparency, and using AI tools to empower people to interrogate data.   
+## A Christmas card in R for the Real World Data Science community
+Inspired by Nicola Rennie's excellent tutorial on making Christmas cards with R, we've had a go at putting together our own design -- especially for you, the wonderful community of Real World Data Science readers and contributors. Thank you for supporting us this year! We'll be back in January.   
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/interviews/posts/2023/12/15/images/ian-diamond.png)
+![](viewpoints/editors-blog/posts/2023/12/12/images/rwds-christmas-card-thumb.png)
 :::
 :::
 
