videos added to positconf blog

--- a/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd
+++ b/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd
@@ -7,6 +7,7 @@ categories:
   - Events
 author: Brian Tarran
 date: 09/27/2023
+date-modified: 01/03/2024
 toc: true
 image: images/chicago-theatre.png
 image-alt: Chicago Theatre sign, illuminated at night.
@@ -16,8 +17,9 @@ webr:
 filters:
   - webr
 ---
+
 ::: {.callout-note appearance="simple" style="margin-top:0"}
-posit::conf(2023) is over, but this blog remains open for contributions. If you want to share personal highlights or reflections on your time at conference: 1. Fork [our repo](https://github.com/realworlddatascience/realworlddatascience.github.io), 2. update [this file](https://github.com/realworlddatascience/realworlddatascience.github.io/blob/positconf-blog/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd) in the `positconf-blog` branch (or create a new branch of your own), and 3. make a pull request! You can also [email contributions](https://realworlddatascience.net/contact.html).
+Videos from posit::conf(2023) are now available on YouTube, including our talk about [how we built Real World Data Science using Quarto](https://www.youtube.com/watch?v=ncDEqHxMWnE&). We've embedded a selection of videos in this blog post, but be sure to [check out the full playlist](https://www.youtube.com/playlist?list=PL9HYL-VRX0oRFZslRGHwHuwea7SvAATHp).
 :::
 
 ## Tuesday, September 19
@@ -34,6 +36,8 @@ Data scientists should start by scanning for opportunities to help the organisat
 
 Throughout this process, McVey said, data scientists should be building foundations for future projects -- creating data pipelines, R packages, etc., that can be reused later. This was a point picked up and developed upon by Meza, who walked through in detail the steps required to establish "data foundations" within organisations, drawing on his own past experiences. Typically, he said, organisations seem to collect data just to store it -- but always data should be collected, stored, and managed with analysis in mind.
 
+{{< video "https://www.youtube.com/embed/HTMvZWUTBug?si=czcM26PRai5B-pZI" >}}
+
 ### A hacker's guide to open source LLMs
 Fast.ai's Jeremy Howard lifted the hood on large language models (LLMs) in the second of two keynotes this morning. 
 
@@ -46,6 +50,8 @@ The pre-training step, for example, does not involve only feeding the model with
 Howard made the case that users have to help language models to give good answers, and that custom instructions can be used to change the way models respond. He then walked delegates through a series of demos using open-source LLMs, to show how outputs can be refined and improved.
 
 "My view is that if you are going to be good at language modelling in any way," said Howard, "you have to be good at using language models."
+
+{{< video "https://www.youtube.com/embed/sYliwvml9Es?si=68MSZjBZ9yUAh4zC" >}}
 
 ### Documenting Things: Openly for Future Us
 Julia Stewart Lowndes, founding director of [Openscapes](https://openscapes.org/), gave a compelling talk advocating for the importance of documentation for data science projects.
@@ -77,6 +83,8 @@ On language barriers, he pointed out that learning to code in R and Python can b
 
 Dietrichson also has to deal with the problem of "arithmaphobia" among some of the liberal arts students he teaches. This has necessitated a reshuffling of the typical statistics curriculum, he said, in order to make it easier for students to access. But the work is worth it, Dietrichson explained: many of his students want to work in careers like journalism, and he believes that "journalists should be statistically literate."
 
+{{< video "https://www.youtube.com/embed/KLflf_ssWkE?si=fb0QXfpPK8IdrjyZ" >}}
+
 ### Dynamic Interactions: Empowering Educators and Researchers with Interactive Quarto Documents Using webR
 Some of my favourite sessions at posit::conf(2023) were about [Quarto](https://quarto.org/). Understandable, really, when you consider that we used it to build this very site! Albert Rapp has described Quarto as a [web dev gateway drug](https://albert-rapp.de/posts/16_html_css_for_r/16_html_css_for_r.html), and I'd agree with him:
 
@@ -93,10 +101,7 @@ summary(fit)
 
 Visit the [quarto-webr website](https://quarto-webr.thecoatlessprofessor.com/) for details on how to make full use of this capability. Once you're up to speed, why not [contribute a webR-enabled article for Real World Data Science](https://realworlddatascience.net/contributor-docs/contributor-guidelines.html)?
 
-<!-- ### Talk title
-Add write-up here
-
-*Add your name and affiliation here* -->
+{{< video "https://www.youtube.com/embed/60i9f861HLg?si=G3MrLisibAHxW6AP" >}}
 
 ## Wednesday, September 20
 ### R Not Only In Production
@@ -110,6 +115,8 @@ In InsightRX, R has also been used to solve problems that are not strictly data 
 
 "Our mindset of R being a first-class language empowers us to solve problems," said Woo.
 
+{{< video "https://www.youtube.com/embed/tUdrwEIvEyk?si=9Ea3atAA8GrUQK54" >}}
+
 ### It's Abstractions All the Way Down...
 The second of the morning keynotes on day two of posit::conf(2023) was by JD Long, vice president of risk management at RenaissanceRe.
 
@@ -118,6 +125,8 @@ During Long's insightful -- and frequently very funny -- talk, this slide appear
 ![JD Long's assertion #1.](images/jd-slide.PNG){fig-alt="JD Long's slide reads: 'The single biggest business value derived from the data science movement in the last 13 years is making it legitimate to code outside of IT roles.'"}
 
 Do you agree with Long's assertion? If you don't, what *is* the single biggest business value that's been derived from the data science movement? Share your thoughts in the comments below.
+
+{{< video "https://www.youtube.com/embed/Pa1PNfoOp-I?si=TofFDKYiLFn7-yte" >}}
 
 ### It's All About Perspective: Making a Case for Generative Art
 Hobbies are important, right? They are a way to relax, to unwind. But also a great opportunity to learn things that might come in handy professionally. At least, that is the experience of Meghan Santiago Harris, a data scientist in the Prostate Cancer Clinical Trials Consortium at Memorial Sloan Kettering.
@@ -132,6 +141,8 @@ Harris's passion for generative art bloomed during a recent period of maternity 
 
 Generative art was a motivation to learn and do more, Harris said, and doing something she loved helped make programming and data science more digestible.
 
+{{< video "https://www.youtube.com/embed/48m27OWv-uw?si=137wrCfEKcf1X-i1" >}}
+
 ### How the R for Data Science (R4DS) Online Learning Community Made Me a Better Student
 Following straight after [Meghan Santiago Harris](#its-all-about-perspective-making-a-case-for-generative-art) was Lydia Gibson, a data scientist from Intel, with an inspiring talk about her route into data science. Gibson began by explaining how, when younger, "I wanted to be a fashion designer." For her high school prom, Gibson even designed her own dress, which her grandmother made for her.
 
@@ -142,6 +153,8 @@ Gibson told delegates that discovering data visualisation was what made her care
 And it was the [R for Data Science (R4DS) Online Learning Community](https://rfordatasci.com/) that helped take her learning to the next level. Gibson described R4DS as "an amazing, welcoming learning environment where beginners and advanced folks alike can come together to learn not only R but data science as a whole."
 
 "Being surrounded by folks more advanced than you is a gift, not a curse," she said, and she urged delegates to find what they are passionate about and explore its depths.
+
+{{< video "https://www.youtube.com/embed/O34cdFLotJ4?si=FEM6vm8pRl833tNq" >}}
 
 ### GitHub Copilot integration with RStudio, it's finally here!
 Tom Mock, product manager for Posit Workbench and RStudio, had a full house for his talk about the upcoming integration of [GitHub's code Copilot product](https://github.com/features/copilot) into RStudio. Copilot, Mock said, is an AI pair programmer that offers autocomplete-style suggestions for code -- and this integration is one of the most popular requested features among RStudio users on GitHub. 
@@ -154,14 +167,7 @@ See Mock's slide deck below for more details.
 <iframe width="100%" height="563px" src="https://colorado.posit.co/rsc/rstudio-copilot/#/TitleSlide"></iframe>
 ```
 
-<!-- ### Talk title
-Add write-up here
-
-*Add your name and affiliation here* -->
-
-::: {.callout-note appearance="simple" style="margin-top:0"}
-posit::conf(2023) is over, but this blog remains open for contributions. If you want to share personal highlights or reflections on your time at conference: 1. Fork [our repo](https://github.com/realworlddatascience/realworlddatascience.github.io), 2. update [this file](https://github.com/realworlddatascience/realworlddatascience.github.io/blob/positconf-blog/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd) in the `positconf-blog` branch (or create a new branch of your own), and 3. make a pull request! You can also [email contributions](https://realworlddatascience.net/contact.html).
-:::
+{{< video "https://www.youtube.com/embed/TlzMKSE97MQ?si=X7vesp3-zywPSLq_" >}}
 
 ::: {.article-btn}
 [Back to Editors' blog](/viewpoints/editors-blog/index.qmd)
