text and video added

--- a/viewpoints/editors-blog/posts/2024/01/03/posit-conf-video.qmd
+++ b/viewpoints/editors-blog/posts/2024/01/03/posit-conf-video.qmd
@@ -1,24 +1,25 @@
 ---
-title: "A Christmas card in R for the Real World Data Science community"
+title: "Creating a web publication with Quarto: the Real World Data Science origin story"
 description: |
-  Inspired by Nicola Rennie's excellent tutorial on making Christmas cards with R, we've had a go at putting together our own design -- especially for you, the wonderful community of Real World Data Science readers and contributors. Thank you for supporting us this year!
+  This is the story of how a Royal Statistical Society editor discovered Quarto, learned how to code (a bit), and built realworlddatascience.net, an online publication for the data science community.
 categories:
-  - R
-  - Data visualisation
-  - Updates
+  - Coding
+  - Communication
+  - Events
+  - Communities
+  - Open source
 author: Brian Tarran
-date: 12/12/2023
-toc: true
-image: images/rwds-christmas-card-thumb.png
-image-alt: Purple square with white snowflakes and green tree in foreground. Tree is decorated with red and gold baubles of various sizes.
-execute:
-  eval: false
-  echo: true
-  messages: false
-  error: false
-  warning: false
+date: 01/03/2024
+toc: false
+image: images/video-grab.png
+image-alt: Still from posit::conf(2023) talk, splitscreen view. On the left screen is Real World Data Science editor Brian Tarran presenting; on the right screen is a screengrab of the Quarto webpage, with the words GitHub Pages circled in red. 
 ---
-test
+
+When I attended posit::conf(2023) in Chicago last year, I gave a talk about creating Real World Data Science using Quarto, the open source publishing system developed by Posit. That talk is now online, along with all the other conference talks and keynotes. 
+
+My talk, "From Journalist to Coder: Creating a Web Publication with Quarto," is embedded below. You can also find a selection of talks on [our posit::conf highlights blog](https://realworlddatascience.net/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.html). The [full conference playlist is on YouTube](https://www.youtube.com/playlist?list=PL9HYL-VRX0oRFZslRGHwHuwea7SvAATHp).
+
+{{< video "https://www.youtube.com/embed/ncDEqHxMWnE?si=A1GmLphRPlmspJCj" >}}
 
 ::: {.article-btn}
 [Back to Editors' blog](/viewpoints/editors-blog/index.qmd)
@@ -35,7 +36,7 @@ Copyright and licence
 :::
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Tarran, Brian. 2023. "A Christmas card in R for the Real World Data Science community." Real World Data Science, December 12, 2023. [URL](https://realworlddatascience.net/viewpoints/editors-blog/posts/2023/12/12/rwds-xmas-card.html)
+: Tarran, Brian. 2024. "Creating a web publication with Quarto: the Real World Data Science origin story." Real World Data Science, January 03, 2024. [URL](https://realworlddatascience.net/viewpoints/editors-blog/posts/2024/01/03/posit-conf-video.html)
 :::
 :::
 :::
