homepage and article description updated

--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!rwds-xmas-card.qmd"
+    - "!posit-conf-video.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -67,9 +67,9 @@ listing:
     contents: 
     - /viewpoints
     - "!index.qmd"
-    - "!digital-ethics-summit.qmd"
     - "!rwds-xmas-card.qmd"
     - "!ian-diamond.qmd"
+    - "!posit-conf-video.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -131,15 +131,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/editors-blog/posts/2023/12/12/rwds-xmas-card.qmd">
+<a href="/viewpoints/editors-blog/posts/2024/01/03/posit-conf-video.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## A Christmas card in R for the Real World Data Science community
-Inspired by Nicola Rennie's excellent tutorial on making Christmas cards with R, we've had a go at putting together our own design -- especially for you, the wonderful community of Real World Data Science readers and contributors. Thank you for supporting us this year! We'll be back in January.   
+## Creating a web publication with Quarto: the Real World Data Science origin story
+This is the story of how a Royal Statistical Society editor discovered an open source publishing system called Quarto, learned how to code (a bit), and built an online publication for the data science community.   
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/editors-blog/posts/2023/12/12/images/rwds-christmas-card-thumb.png)
+![](viewpoints/editors-blog/posts/2024/01/03/images/video-grab.png)
 :::
 :::
 
