--- a/viewpoints/editors-blog/posts/2024/01/03/posit-conf-video.qmd
+++ b/viewpoints/editors-blog/posts/2024/01/03/posit-conf-video.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Creating a web publication with Quarto: the Real World Data Science origin story"
 description: |
-  This is the story of how a Royal Statistical Society editor discovered Quarto, learned how to code (a bit), and built realworlddatascience.net, an online publication for the data science community.
+  This is the story of how a Royal Statistical Society editor discovered an open source publishing system called Quarto, learned how to code (a bit), and built an online publication for the data science community.
 categories:
   - Coding
   - Communication
@@ -29,7 +29,7 @@ My talk, "From Journalist to Coder: Creating a Web Publication with Quarto," is 
 ::: grid
 ::: {.g-col-12 .g-col-md-6}
 Copyright and licence
-: &copy; 2023 Royal Statistical Society
+: &copy; 2024 Royal Statistical Society
 
 <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>.
 
