--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,8 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!posit-conf-video.qmd"
+    - "!census-bureau.qmd"
+    - "!xmas-cards.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -42,7 +43,6 @@ listing:
     - /ideas
     - "!index.qmd"
     - "!dsb-live.qmd"
-    - "!xmas-cards.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -70,6 +70,7 @@ listing:
     - "!rwds-xmas-card.qmd"
     - "!ian-diamond.qmd"
     - "!posit-conf-video.qmd"
+    - "!census-bureau.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -131,15 +132,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/editors-blog/posts/2024/01/03/posit-conf-video.qmd">
+<a href="/viewpoints/interviews/posts/2024/01/15/census-bureau.html">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Creating a web publication with Quarto: the Real World Data Science origin story
-This is the story of how a Royal Statistical Society editor discovered an open source publishing system called Quarto, learned how to code (a bit), and built an online publication for the data science community.   
+## 'We absolutely have to transform and modernise our operation'
+Edited highlights from an interview conducted last summer with US Census Bureau director Robert Santos and colleagues, touching on pandemic challenges, the growing use of administrative data, data privacy concerns, data education and literacy, and how large language models might change the way we interact with official statistics.   
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/editors-blog/posts/2024/01/03/images/video-grab.png)
+![](viewpoints/interviews/posts/2024/01/15/images/robert-santos.png)
 :::
 :::
 
