blog added, homepage updated

--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!census-bureau.qmd"
+    - "!cherry-blossom.qmd"
     - "!xmas-cards.qmd"
     sort: "date desc"
     type: grid
@@ -67,10 +67,10 @@ listing:
     contents: 
     - /viewpoints
     - "!index.qmd"
-    - "!rwds-xmas-card.qmd"
     - "!ian-diamond.qmd"
     - "!posit-conf-video.qmd"
     - "!census-bureau.qmd"
+    - "!cherry-blossom.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -132,15 +132,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/interviews/posts/2024/01/15/census-bureau.html">
+<a href="/viewpoints/editors-blog/posts/2024/01/18/cherry-blossom.html">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## 'We absolutely have to transform and modernise our operation'
-Edited highlights from an interview conducted last summer with US Census Bureau director Robert Santos and colleagues, touching on pandemic challenges, the growing use of administrative data, data privacy concerns, data education and literacy, and how large language models might change the way we interact with official statistics.   
+## When will the cherry trees bloom? Get ready to make and share your predictions!
+The 2024 International Cherry Blossom Prediction Competition will open for entries on February 1. There's cash and prizes on offer for the best entries, including having your work featured on Real World Data Science.    
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/interviews/posts/2024/01/15/images/robert-santos.png)
+![](viewpoints/editors-blog/posts/2024/01/18/images/cherry-blossom.png)
 :::
 :::
 
