--- a/viewpoints/interviews/posts/2023/01/25/erica-thompson.qmd
+++ b/viewpoints/interviews/posts/2023/01/25/erica-thompson.qmd
@@ -7,6 +7,7 @@ categories:
   - Ethics
 author: Brian Tarran
 date: 01/25/2023
+date-modified: 01/18/2024
 toc: true
 image: images/erica-thompson.png
 image-alt: Photo of Erica Thompson
@@ -159,7 +160,8 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Tarran, Brian. 2023. "How to ‘Escape from Model Land’: an interview with Erica Thompson." Real World Data Science, January 25, 2023. [URL](https://realworlddatascience.net/news-and-views/interviews/posts/01/25/erica-thompson.html)
+: Tarran, Brian. 2023. "How to ‘Escape from Model Land’: an interview with Erica Thompson." Real World Data Science, January 25, 2023. [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.10527419.svg)](https://doi.org/10.5281/zenodo.10527419)
+
 :::
 :::
 :::
