DOI added, badge styling updated

--- a/ideas/tutorials/posts/2023/04/13/flowers.qmd
+++ b/ideas/tutorials/posts/2023/04/13/flowers.qmd
@@ -8,6 +8,7 @@ categories:
   - Statistics
 author: Jonathan Auerbach
 date: 04/13/2023
+date-modified: 01/18/2024
 bibliography: references.bib
 image: images/quetelet-flowers.png
 image-alt: Portrait of Adolphe Quetelet, superimposed on a photo of blooming purple lilacs. Quetelet portrait from Wikimedia Commons, Public Domain. Lilacs photo by Arina Bogachyova/iStock.
@@ -2139,7 +2140,8 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Auerbach, Jonathan. 2023. "A demonstration of the law of the flowering plants." Real World Data Science, April 13, 2023. [URL](https://realworlddatascience.net/ideas/tutorials/posts/2023/04/13/flowers.html)
+: Auerbach, Jonathan. 2023. "A demonstration of the law of the flowering plants." Real World Data Science, April 13, 2023. [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.10528535.svg){style="vertical-align:text-bottom;"}](https://doi.org/10.5281/zenodo.10528535)
+
 :::
 :::
 :::
