--- a/viewpoints/interviews/posts/2023/01/25/erica-thompson.qmd
+++ b/viewpoints/interviews/posts/2023/01/25/erica-thompson.qmd
@@ -160,7 +160,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Tarran, Brian. 2023. "How to ‘Escape from Model Land’: an interview with Erica Thompson." Real World Data Science, January 25, 2023. [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.10527419.svg)](https://doi.org/10.5281/zenodo.10527419)
+: Tarran, Brian. 2023. "How to ‘Escape from Model Land’: an interview with Erica Thompson." Real World Data Science, January 25, 2023. [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.10527419.svg){style="vertical-align:text-bottom;"}](https://doi.org/10.5281/zenodo.10527419)
 
 :::
 :::
