--- a/ideas/tutorials/posts/2023/12/12/xmas-cards.qmd
+++ b/ideas/tutorials/posts/2023/12/12/xmas-cards.qmd
@@ -7,6 +7,7 @@ categories:
   - Data visualisation
 author: Nicola Rennie
 date: 12/12/2023
+date-modified: 01/19/2024
 toc: true
 bibliography: references.bib
 execute:
@@ -308,7 +309,8 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Rennie, Nicola. 2023. "Creating Christmas cards with R." Real World Data Science, December 12, 2023. [URL](https://realworlddatascience.net/ideas/tutorials/posts/2023/12/12/xmas-cards.html)
+: Rennie, Nicola. 2023. "Creating Christmas cards with R." Real World Data Science, December 12, 2023. [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.10530635.svg){style="vertical-align:text-bottom;"}](https://doi.org/10.5281/zenodo.10530635)
+
 :::
 :::
 :::
