--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!cherry-blossom.qmd"
+    - "!gen-ai-framework.qmd"
     - "!xmas-cards.qmd"
     sort: "date desc"
     type: grid
@@ -67,10 +67,10 @@ listing:
     contents: 
     - /viewpoints
     - "!index.qmd"
-    - "!ian-diamond.qmd"
     - "!posit-conf-video.qmd"
     - "!census-bureau.qmd"
     - "!cherry-blossom.qmd"
+    - "!gen-ai-framework.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -132,15 +132,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/editors-blog/posts/2024/01/18/cherry-blossom.html">
+<a href="/viewpoints/editors-blog/posts/2024/01/22/gen-ai-framework.html">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## When will the cherry trees bloom? Get ready to make and share your predictions!
-The 2024 International Cherry Blossom Prediction Competition will open for entries on February 1. There's cash and prizes on offer for the best entries, including having your work featured on Real World Data Science.    
+## UK government sets out 10 principles for use of generative AI
+Government says staff need to understand what generative AI is, its limitations, how to monitor and mitigate "generative AI drift, bias and hallucinations" and to have "a robust testing and monitoring process in place to catch these problems."    
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/editors-blog/posts/2024/01/18/images/cherry-blossom.png)
+![](viewpoints/editors-blog/posts/2024/01/22/images/uk-parliament.png)
 :::
 :::
 
@@ -175,11 +175,11 @@ Welcome to **Real World Data Science**, a new project from the [Royal Statistica
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## I hear more and more a lot of companies talking about AI general intelligence, and how AI is going to take over the world, and I’m tremendously concerned about this. There is an opportunity to build AI that is human empowering, that keeps us strong, able, capable, intelligent, and can support us in all our human capabilities.
-Mihaela van der Schaar on AI's potential for good
+## We have changed the culture, our techniques, and our data. What we have now are appropriate methodologies to answer appropriate questions. Do we still use qualitative data? A hundred percent, when it is necessary to do so. Do we still use surveys? Yes, we’ve got some of the best surveys in the world. But equally, we also use digital data, administrative data, and we use very modern techniques of analysing those data.
+Professor Sir Ian Diamond, UK national statistician
 
 ::: {.button}
-[Join the debate](viewpoints/posts/2023/12/06/ai-fringe.qmd)
+[Read the interview](viewpoints/interviews/posts/2023/12/15/ian-diamond.qmd)
 :::
 
 :::
@@ -217,11 +217,11 @@ Mihaela van der Schaar on AI's potential for good
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## In academia, the bias in favor of positive findings is well-documented. But, in an applied setting, where results matter more than publication criteria, negative findings can falsify erroneous assumptions, bring unknown problems to light, and prompt the creation of new processes and tools. In this context, a failure is only truly a failure if nothing is learned from it.
-Noah Wright on 'learning from failure' 
+## Data duplication is a ubiquitous problem affecting data quality. Organisations often have multiple records that refer to the same entity but no unique identifier that ties these entities together. Data entry errors and other issues mean that variations usually exist, so the records belonging to a single entity aren’t necessarily identical.
+Robin Linacre describes the problem that inspired 'Splink'
 
 ::: {.button}
-[Read the case study](case-studies/posts/2023/11/16/learning-from-failure.qmd)
+[Read the case study](case-studies/posts/2023/11/22/splink.html)
 :::
 
 :::
