remove fix for pagination listings error

--- a/index.qmd
+++ b/index.qmd
@@ -5,6 +5,7 @@ section-divs: false
 editor: source
 sidebar: false
 search: false
+repo-actions: false
 description: | 
   A showcase for data science in action, brought to you by the Royal Statistical Society in partnership with the American Statistical Association.
 image: images/rwds-logo-150px.png
