repo-actions set to false on index pages

--- a/careers/career-profiles/index.qmd
+++ b/careers/career-profiles/index.qmd
@@ -3,6 +3,7 @@ pagetitle: Career Profiles | Careers | Real World Data Science
 title: Career profiles
 subtitle: Data scientists share their career stories (so far) -- from first jobs to current challenges to future goals
 search: false
+repo-actions: false
 listing:
   contents: posts
   sort: "date desc"
