--- a/careers/index.qmd
+++ b/careers/index.qmd
@@ -2,7 +2,8 @@
 pagetitle: Careers | Real World Data Science
 title: Careers
 subtitle: "Insight, advice and guidance on how to succeed in data science. In this section: [Career profiles](career-profiles/index.qmd)"
-search: false 
+search: false
+repo-actions: false
 listing:
   contents:
   - posts 
