--- a/case-studies/index.qmd
+++ b/case-studies/index.qmd
@@ -2,7 +2,8 @@
 pagetitle: Case studies | Real World Data Science
 title: Case studies
 subtitle: How data science is used to solve real-world problems in business, public policy and beyond
-search: false  
+search: false
+repo-actions: false
 listing:
   contents: 
   - posts
