--- a/ideas/tutorials/index.qmd
+++ b/ideas/tutorials/index.qmd
@@ -3,6 +3,7 @@ pagetitle: Tutorials | Ideas | Real World Data Science
 title: Tutorials
 subtitle: Hands-on explorations of data science concepts, tools and methods
 search: false
+repo-actions: false
 listing:
   contents: posts
   sort: "date desc"
