--- a/ideas/datasciencebites/index.qmd
+++ b/ideas/datasciencebites/index.qmd
@@ -3,6 +3,7 @@ pagetitle: DataScienceBites | Ideas | Real World Data Science
 title: Data Science Bites
 subtitle: Digests of new papers in the data science literature
 search: false
+repo-actions: false
 listing:
   contents: posts
   sort: "date desc"
