--- a/viewpoints/interviews/index.qmd
+++ b/viewpoints/interviews/index.qmd
@@ -3,6 +3,7 @@ pagetitle: Interviews | Viewpoints | Real World Data Science
 title: Interviews
 subtitle: Deep dives with data scientists on hot topics and burning issues
 search: false
+repo-actions: false
 listing:
   contents: posts
   sort: "date desc"
