small styling fix for Quarto 1.4

--- a/case-studies/posts/2023/11/16/learning-from-failure.qmd
+++ b/case-studies/posts/2023/11/16/learning-from-failure.qmd
@@ -17,7 +17,7 @@ image-alt: Computer monitor displaying bodycam recordings, primary colours, digi
 
 Incarcerated youth are an exceptionally vulnerable population, and body-worn cameras are an important tool of accountability both for those incarcerated and the staff who supervise them. In 2018 the Texas Juvenile Justice Department (TJJD) deployed body-worn cameras for the first time, and this is a case study of how the agency developed a methodology for measuring the success of the camera rollout. This is also a case study of analysis failure, as it became clear that real-world implementation problems were corrupting the data and rendering the methodology unusable. However, the process of working through the causes of this failure helped the agency identify previously unrecognized problems and ultimately proved to be of great benefit. The purpose of this case study is to demonstrate how negative findings can still be incredibly useful in real-world settings.
 
-::: {.callout-note appearance="simple" collapse="true" style="margin:0"}
+::: {.callout-note appearance="simple" collapse="true"}
 ## Why body-worn cameras?
 
 Body-worn cameras became a standard tool of policing in the US in the mid-2010s. By recording officer interactions with the public, law enforcement agencies could achieve a greater degree of accountability. Not only could credible claims of police abuse against civilians be easily verified, the argument went, but false accusations would decline as well, saving law enforcement agencies time and resources that would otherwise be wasted on spurious allegations. Initial studies seemed to support this argument.
