lightbox settings updated for Quarto v1.4

--- a/ideas/tutorials/posts/2023/04/13/flowers.qmd
+++ b/ideas/tutorials/posts/2023/04/13/flowers.qmd
@@ -13,9 +13,7 @@ bibliography: references.bib
 image: images/quetelet-flowers.png
 image-alt: Portrait of Adolphe Quetelet, superimposed on a photo of blooming purple lilacs. Quetelet portrait from Wikimedia Commons, Public Domain. Lilacs photo by Arina Bogachyova/iStock.
 toc: true
-filters:
-  - lightbox
-lightbox: auto
+lightbox: true
 link-bibliography: true
 ---
 This tutorial will demonstrate a popular method for predicting the day a flower will bloom. There are many reasons why you might want to predict a bloom date. You might be a scientist studying ecosystems stressed by climate change. Or you might be planning a trip to Amsterdam and would like to time your stay to when the tulips are in bloom. Or maybe you are participating in the annual [Cherry Blossom Prediction Competition](https://competition.statistics.gmu.edu/) and want some ideas to help you get started.
