--- a/ts-and-cs.qmd
+++ b/ts-and-cs.qmd
@@ -27,7 +27,7 @@ These disclaimers and exclusions shall be governed by and construed in accordanc
 By using this site, you agree to these terms and conditions of use.   
 
 ## Site content
-This site and the "Real World Data Science" and "RWDS" brands and logos are copyright &copy; The Royal Statistical Society.
+This site and the "Real World Data Science" and "RWDS" brands and logos are copyright &copy; Royal Statistical Society.
 
 Copyright and licence terms for published articles and any associated videos, images, or other material can be found at the end of each article page. We make every reasonable effort to locate, contact and acknowledge copyright owners and wish to be informed by any copyright owners who are not properly identified and acknowledged on this website so that we may make any necessary corrections.
 
