--- a/viewpoints/editors-blog/posts/2024/02/08/llms-whitepaper-response.qmd
+++ b/viewpoints/editors-blog/posts/2024/02/08/llms-whitepaper-response.qmd
@@ -17,7 +17,7 @@ image-alt: Photo of the UK Houses of Parliament at dusk, taken from across the R
 
 The UK government this week announced a £10 million investment to "jumpstart regulators' AI capabilities" as part of its commitment to a "pro-innovation approach to AI regulation." But will this be sufficient to answer criticisms that it has so far been "too slow" to give regulators the tools they need to police the growing usage of AI?
 
-A Department for Science, Innovation and Technology (DSIT) white paper last March set out the government's [principles- and context-based approach to regulating artificial intelligence](https://www.gov.uk/government/publications/ai-regulation-a-pro-innovation-approach/white-paper). This proposed to focus regulatory attention on "the context in which AI is deployed" rather than target specific technologies. Under this model, existing regulators, including the Information Commissioners Office, Ofcom, and the Competition and Markets Authority, would be responsible for ensuring that technologies deployed within their domains adhered to a common set of principles:
+It was March last year when a Department for Science, Innovation and Technology (DSIT) white paper first set out the government's [principles- and context-based approach to regulating artificial intelligence](https://www.gov.uk/government/publications/ai-regulation-a-pro-innovation-approach/white-paper). This proposed to focus regulatory attention on "the context in which AI is deployed" rather than target specific technologies. Under this model, existing regulators, including the Information Commissioner's Office, Ofcom, and the Competition and Markets Authority, would be responsible for ensuring that technologies deployed within their domains adhered to established rules -- e.g., data protection regulation -- and a common set of principles:
 
 - Safety, security and robustness.
 - Appropriate transparency and explainability.
@@ -25,20 +25,20 @@ A Department for Science, Innovation and Technology (DSIT) white paper last Marc
 - Accountability and governance.
 - Contestability and redress.
 
-This approach was broadly well-received, as was clear from a debate at techUK's [Digital Ethics Summit](https://realworlddatascience.net/viewpoints/editors-blog/posts/2023/12/08/digital-ethics-summit.html) last December. However, concerns were expressed about whether regulators would be funded sufficiently to meet the expectations set out in the March whitepaper. And the Royal Statistical Society, in [its response to the whitepaper](https://rss.org.uk/RSS/media/File-library/Policy/2023/RSS-AI-white-paper-response-v2-2.pdf), worried that "splitting responsibilities for regulating the use of AI between existing regulators does not meet the scale of the challenge," and that "central leadership is required to give a clear, coherent and easily communicable framework that can be applied to all sectors."
+The approach was broadly well-received, as was clear from a debate at techUK's [Digital Ethics Summit](https://realworlddatascience.net/viewpoints/editors-blog/posts/2023/12/08/digital-ethics-summit.html) last December. However, concerns were expressed about whether regulators would be funded sufficiently to meet the expectations set out in the March white paper. And the Royal Statistical Society, in [its response to the white paper](https://rss.org.uk/RSS/media/File-library/Policy/2023/RSS-AI-white-paper-response-v2-2.pdf), worried that "splitting responsibilities for regulating the use of AI between existing regulators does not meet the scale of the challenge," and that "central leadership is required to give a clear, coherent and easily communicable framework that can be applied to all sectors."
 
-While the government whitepaper proposed that a range of "central functions" be created to support regulators, [evidence presented to a House of Lords inquiry](https://committees.parliament.uk/committee/170/communications-and-digital-committee/news/199728/uk-will-miss-ai-goldrush-unless-government-adopts-a-more-positive-vision/) last November suggested that regulators "did not appear to know what was happening" with these mooted teams and were "keen to see progress" on this front.
+While the DSIT white paper proposed that a range of "central functions" be created to support regulators, [evidence presented to a House of Lords inquiry](https://committees.parliament.uk/committee/170/communications-and-digital-committee/news/199728/uk-will-miss-ai-goldrush-unless-government-adopts-a-more-positive-vision/) last November suggested that regulators "did not appear to know what was happening" with these mooted teams and were "keen to see progress" on this front.
 
 In reporting the outcomes of its inquiry last week, the House of Lords Communications and Digital Committee concluded that government was being "too slow" to give regulators the tools required to meet the objectives set out in the white paper, and that "speedier resourcing of government‑led
 central support teams is needed." 
 
 "Relying on existing regulators to ensure good outcomes from AI will only work if they are properly resourced and empowered," the committee said. 
 
-The £10 million funding for regulators announced this work is therefore likely to be welcomed. Money is earmarked to "help regulators develop cutting-edge research and practical tools to monitor and address risks and opportunities in their sectors, from telecoms and healthcare to finance and education," according to [a DSIT press release](https://www.gov.uk/government/news/uk-signals-step-change-for-regulators-to-strengthen-ai-leadership). And, [speaking on February 6 at a hearing of the Lords Communications and Digital Committee](https://parliamentlive.tv/event/index/68ecee17-2896-4002-8736-1608229db364?in=15:27:41), Michelle Donelan, Secretary of State for Science, Innovation and Technology, said that the government would "stay on top of exactly what do our regulators need" to be able to fulfil their responsibilities for regulating the use of AI in their sectors.
+The £10 million funding for regulators announced this week is therefore likely to be welcomed. Money is earmarked to "help regulators develop cutting-edge research and practical tools to monitor and address risks and opportunities in their sectors, from telecoms and healthcare to finance and education," according to [a DSIT press release](https://www.gov.uk/government/news/uk-signals-step-change-for-regulators-to-strengthen-ai-leadership). [Speaking on February 6 at a hearing of the Lords Communications and Digital Committee](https://parliamentlive.tv/event/index/68ecee17-2896-4002-8736-1608229db364?in=15:27:41), Michelle Donelan, Secretary of State for Science, Innovation and Technology, said that the government would "stay on top of exactly what do our regulators need" to be able to fulfil their responsibilities for regulating the use of AI in their sectors.
 
 ## White paper response
 
-News of the funding came as part of [a long-awaited response by the government to its AI regulation white paper consultation](https://www.gov.uk/government/consultations/ai-regulation-a-pro-innovation-approach-policy-proposals/outcome/a-pro-innovation-approach-to-ai-regulation-government-response). The response essentially confirmed that the government was proceeding with its principles- and context-based approach to regulating AI, having received "strong support from stakeholders across society." 
+News of the funding came as part of [a long-awaited response by the government to the consultation on its AI regulation white paper](https://www.gov.uk/government/consultations/ai-regulation-a-pro-innovation-approach-policy-proposals/outcome/a-pro-innovation-approach-to-ai-regulation-government-response). The response essentially confirmed that the government was proceeding with its principles- and context-based approach to regulating AI, having received "strong support from stakeholders across society." 
 
 This approach is right for today, the government said, "as it allows us to keep pace with rapid and uncertain advances in AI." However, it acknowledged that "the challenges posed by AI technologies will ultimately require legislative action in every country once understanding of risk has matured."
 
@@ -46,11 +46,11 @@ This approach is right for today, the government said, "as it allows us to keep 
 
 As a next step in delivering on the white paper approach, the government is asking key regulators to publish an update on their strategic approach to AI by the end of April. This was welcomed by Royal Statistical Society (RSS) president Andrew Garrett, who said:
 
-> Urgency is certainly warranted, and the directive for key regulators to disclose their approach in the coming months is a positive development. Ensuring consistency and coherence not only among key regulators but also those who follow is crucial.
+> "Urgency is certainly warranted, and the directive for key regulators to disclose their approach in the coming months is a positive development. Ensuring consistency and coherence not only among key regulators but also those who follow is crucial."
 
 Garrett also [reiterated the need for government to engage with statisticians and data scientists](https://realworlddatascience.net/viewpoints/interviews/posts/2023/10/25/evaluating-ai.html), particularly through its [new AI Safety Institute](https://realworlddatascience.net/viewpoints/posts/2023/12/06/ai-fringe.html) (AISI). In the white paper consultation response, AISI is billed as being "fundamental to informing the UK's regulatory framework": it will "advance the world's knowledge of AI safety by carefully examining, evaluating, and testing new frontier AI systems" and "research new techniques for understanding and mitigating AI risk." Garrett said:
 
-> As always, fostering diversity of representation within government and regulatory bodies remains paramount; it cannot solely rely on input from major tech companies. It is especially important that the AI Safety Institute engages with a diverse array of voices, including statisticians and data scientists who play a pivotal role in both the development of AI systems and novel evaluation methodologies.
+> "As always, fostering diversity of representation within government and regulatory bodies remains paramount; it cannot solely rely on input from major tech companies. It is especially important that the AI Safety Institute engages with a diverse array of voices, including statisticians and data scientists who play a pivotal role in both the development of AI systems and novel evaluation methodologies."
 
 ## Risks and opportunities
 
@@ -59,7 +59,7 @@ more immediate issues like copyright infringement, bias and reliability."
 
 [^1]: See, for example, ["No, AI probably won’t kill us all – and there’s more to this fear campaign than meets the eye."](https://realworlddatascience.net/viewpoints/posts/2023/06/05/no-AI-probably-wont-kill-us.html)
 
-The committee called for enhanced governance and transparency measures in DSIT and AISI to guard against regulatory capture, and for a rebalancing away from a "narrow focus on high-stakes AI safety" towards a "more positive vision for the opportunities [of AI] and a more deliberate focus on near-term risks" including cyber security and disinformation. 
+The committee called for enhanced governance and transparency measures in DSIT and AISI to guard against regulatory capture, and for a rebalancing away from a "narrow focus on high-stakes AI safety" toward a "more positive vision for the opportunities [of AI] and a more deliberate focus on near-term risks" including cyber security and disinformation. 
 
 It also wants to see greater action by the government in support of copyright. "Some tech firms are using copyrighted material without permission, reaping vast financial rewards," reads the report. "The legalities of this are complex but the principles remain clear. The point of copyright is to reward creators for their efforts, prevent others from using works without permission, and incentivise innovation. The current legal framework is failing to ensure these outcomes occur and the Government has a duty to act. It cannot sit on its hands for the next decade and hope the courts will provide an answer."
 
