ready to publish

--- a/viewpoints/editors-blog/posts/2024/02/08/llms-whitepaper-response.qmd
+++ b/viewpoints/editors-blog/posts/2024/02/08/llms-whitepaper-response.qmd
@@ -3,7 +3,7 @@ title: "£10m for UK regulators to 'jumpstart' AI capabilities, as government co
 description: |
   It's been a busy seven days for AI news in the UK as two major government reports were published, millions of pounds of new investments were announced, and warnings rang out of the risk of 'regulatory capture.' Here are some key takeaways.
 categories:
-  - AI ethics
+  - AI
   - Large language models
   - Public policy
   - Risk
@@ -25,7 +25,7 @@ It was March last year when a Department for Science, Innovation and Technology 
 - Accountability and governance.
 - Contestability and redress.
 
-The approach was broadly well-received, as was clear from a debate at techUK's [Digital Ethics Summit](https://realworlddatascience.net/viewpoints/editors-blog/posts/2023/12/08/digital-ethics-summit.html) last December. However, concerns were expressed about whether regulators would be funded sufficiently to meet the expectations set out in the March white paper. And the Royal Statistical Society, in [its response to the white paper](https://rss.org.uk/RSS/media/File-library/Policy/2023/RSS-AI-white-paper-response-v2-2.pdf), worried that "splitting responsibilities for regulating the use of AI between existing regulators does not meet the scale of the challenge," and that "central leadership is required to give a clear, coherent and easily communicable framework that can be applied to all sectors."
+The approach was broadly well received, as was clear from a debate at techUK's [Digital Ethics Summit](https://realworlddatascience.net/viewpoints/editors-blog/posts/2023/12/08/digital-ethics-summit.html) last December. However, concerns were expressed about whether regulators would be funded sufficiently to meet the expectations set out in the March white paper. Also, the Royal Statistical Society, in [its response to the white paper](https://rss.org.uk/RSS/media/File-library/Policy/2023/RSS-AI-white-paper-response-v2-2.pdf), worried that "splitting responsibilities for regulating the use of AI between existing regulators does not meet the scale of the challenge," and that "central leadership is required to give a clear, coherent and easily communicable framework that can be applied to all sectors."
 
 While the DSIT white paper proposed that a range of "central functions" be created to support regulators, [evidence presented to a House of Lords inquiry](https://committees.parliament.uk/committee/170/communications-and-digital-committee/news/199728/uk-will-miss-ai-goldrush-unless-government-adopts-a-more-positive-vision/) last November suggested that regulators "did not appear to know what was happening" with these mooted teams and were "keen to see progress" on this front.
 
@@ -34,11 +34,11 @@ central support teams is needed."
 
 "Relying on existing regulators to ensure good outcomes from AI will only work if they are properly resourced and empowered," the committee said. 
 
-The £10 million funding for regulators announced this week is therefore likely to be welcomed. Money is earmarked to "help regulators develop cutting-edge research and practical tools to monitor and address risks and opportunities in their sectors, from telecoms and healthcare to finance and education," according to [a DSIT press release](https://www.gov.uk/government/news/uk-signals-step-change-for-regulators-to-strengthen-ai-leadership). [Speaking on February 6 at a hearing of the Lords Communications and Digital Committee](https://parliamentlive.tv/event/index/68ecee17-2896-4002-8736-1608229db364?in=15:27:41), Michelle Donelan, Secretary of State for Science, Innovation and Technology, said that the government would "stay on top of exactly what do our regulators need" to be able to fulfil their responsibilities for regulating the use of AI in their sectors.
+The £10 million funding for regulators announced this week is therefore likely to be welcomed. Money is earmarked to "help regulators develop cutting-edge research and practical tools to monitor and address risks and opportunities in their sectors, from telecoms and healthcare to finance and education," according to [a DSIT press release](https://www.gov.uk/government/news/uk-signals-step-change-for-regulators-to-strengthen-ai-leadership). [Speaking on February 6 at a hearing of the Lords Communications and Digital Committee](https://parliamentlive.tv/event/index/68ecee17-2896-4002-8736-1608229db364?in=15:27:41), Michelle Donelan, Secretary of State for Science, Innovation and Technology, said that the government would "stay on top" of what regulators need to be able to fulfil their responsibilities for regulating the use of AI in their sectors.
 
-## White paper response
+## Consultation response
 
-News of the funding came as part of [a long-awaited response by the government to the consultation on its AI regulation white paper](https://www.gov.uk/government/consultations/ai-regulation-a-pro-innovation-approach-policy-proposals/outcome/a-pro-innovation-approach-to-ai-regulation-government-response). The response essentially confirmed that the government was proceeding with its principles- and context-based approach to regulating AI, having received "strong support from stakeholders across society." 
+News of the funding for regulators came as part of [a long-awaited response by the government to the consultation on its AI regulation white paper](https://www.gov.uk/government/consultations/ai-regulation-a-pro-innovation-approach-policy-proposals/outcome/a-pro-innovation-approach-to-ai-regulation-government-response). The response essentially confirmed that the government was proceeding with its principles- and context-based approach to regulating AI, having received "strong support from stakeholders across society." 
 
 This approach is right for today, the government said, "as it allows us to keep pace with rapid and uncertain advances in AI." However, it acknowledged that "the challenges posed by AI technologies will ultimately require legislative action in every country once understanding of risk has matured."
 
@@ -63,7 +63,7 @@ The committee called for enhanced governance and transparency measures in DSIT a
 
 It also wants to see greater action by the government in support of copyright. "Some tech firms are using copyrighted material without permission, reaping vast financial rewards," reads the report. "The legalities of this are complex but the principles remain clear. The point of copyright is to reward creators for their efforts, prevent others from using works without permission, and incentivise innovation. The current legal framework is failing to ensure these outcomes occur and the Government has a duty to act. It cannot sit on its hands for the next decade and hope the courts will provide an answer."
 
-Again, here's RSS president Andy Garrett's take on the Lords committee report:
+Again, here's RSS president Andrew Garrett's take on the Lords committee report:
 
 <center><iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7159583475350585344" height="1091" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe></center>
 
